--- a/.gitignore
+++ b/.gitignore
@@ -22,21 +22,14 @@ node_modules/
 # Output of 'npm pack'
 *.tgz
 
-# Yarn Integrity file
-.yarn-integrity
-
-# dotenv environment variables file
-.env
-
-# next.js build output
-.next
-
 # Webstorm
 .idea/
 
+# VSCode
+.vscode/
+
 # Build
-lib/
-var/
+dist/
 
 # OSX
 .DS_Store
