--- a/package.json
+++ b/package.json
@@ -1,92 +1,47 @@
 {
-  "name": "@cumulusds/aws-cloudformation-wait-ready",
-  "version": "1.0.2",
+  "name": "@nursefly/aws-cloudformation-wait-ready",
+  "version": "2.0.0",
   "description": "Wait for a CloudFormation stack to be ready for the next deploy",
-  "repository": "https://github.com/CumulusDS/aws-cloudformation-wait-ready",
-  "author": "Cumulus Digital Systems",
+  "repository": "https://github.com/nursefly/aws-cloudformation-wait-ready",
+  "author": "Vivian Health",
   "license": "MIT",
   "engines": {
-    "node": "^12.13.0 || ^14.15.0 || >=15.0.0"
+    "node": ">=18"
   },
-  "main": "lib/index.js",
+  "type": "module",
+  "main": "dist/index.js",
   "bin": {
     "aws-cloudformation-wait-ready": "bin/aws-cloudformation-wait-ready.js"
   },
-  "src": [
-    "bin, lib",
-    "package.json"
-  ],
   "scripts": {
     "aws-cloudformation-wait-ready": "node bin/aws-cloudformation-wait-ready.js",
-    "build": "run-p build:babel build:flow-copy-source build:license-checker",
-    "build:babel": "babel src --out-dir lib --ignore test.js",
-    "build:flow-copy-source": "flow-copy-source --ignore test.js src lib",
-    "build:license-checker": "license-checker --csv --out var/licenses.csv",
-    "clean": "shx rm -rf lib",
-    "git:push": "git push --follow-tags",
-    "publish:patch": "run-s version:patch git:push",
-    "publish:minor": "run-s version:minor git:push",
-    "publish:major": "run-s version:major git:push",
-    "sites": "node bin/sites.js",
-    "test": "run-p --aggregate-output test:**",
-    "test:flow:coverage-report": "flow-coverage-report -i 'src/**/*.js' -x 'test/**/*.js' -t html -t text --threshold 98 --output-dir var/coverage/flow",
-    "test:flow:status": "flow status",
-    "test:jest": "jest --color",
-    "test:lint": "eslint *.js src test",
-    "test:prettier": "prettier --list-different \"{src,test}/**/*.{js,jsx,yml}\" \"*.{js,yml}\"",
-    "version:patch": "yarn version --new-version patch",
-    "version:minor": "yarn version --new-version minor",
-    "version:major": "yarn version --new-version major"
-  },
-  "jest": {
-    "verbose": true,
-    "collectCoverage": true,
-    "collectCoverageFrom": [
-      "src/**/*.js"
-    ],
-    "testEnvironment": "node",
-    "coverageDirectory": "var/coverage/test",
-    "coverageThreshold": {
-      "global": {
-        "branches": 100,
-        "functions": 100,
-        "lines": 100,
-        "statements": 100
-      }
-    }
+    "build": "tsc",
+    "watch": "tsc -w",
+    "clean": "shx rm -rf dist",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "prepare": "husky install"
   },
   "dependencies": {
-    "aws-sdk": "^2.536.0",
-    "chalk": "^3.0.0",
-    "minimist": "^1.2.8"
+    "@aws-sdk/client-cloudformation": "^3.272.0",
+    "chalk": "^5.2.0",
+    "commander": "^10.0.0"
   },
   "devDependencies": {
-    "@babel/cli": "^7.0.0",
-    "@babel/core": "^7.7.4",
-    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.7.4",
-    "@babel/preset-env": "^7.0.0",
-    "@babel/preset-flow": "^7.0.0",
-    "@cumulusds/flow-coverage-report": "^0.8.1",
-    "babel-eslint": "10.0.3",
-    "babel-jest": "^24.9.0",
-    "eslint": "^6.7.1",
-    "eslint-config-airbnb-base": "14.0.0",
-    "eslint-config-prettier": "^2.9.0",
-    "eslint-plugin-flowtype": "^2.49.3",
-    "eslint-plugin-import": "2.18.2",
-    "eslint-plugin-jest": "^21.15.1",
-    "eslint-plugin-prettier": "^2.6.0",
-    "flow-bin": "^0.112.0",
-    "flow-copy-source": "^2.0.9",
-    "flow-typed": "^3.2.1",
-    "git-describe": "^4.0.4",
-    "jest": "^26.0.0",
-    "license-checker": "^25.0.1",
-    "npm-run-all": "^4.1.3",
-    "prettier": "^1.14.0",
-    "shx": "^0.3.2"
+    "@types/node": "18.11.18",
+    "@typescript-eslint/eslint-plugin": "^5.51.0",
+    "@typescript-eslint/parser": "^5.51.0",
+    "eslint": "^8.34.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-prettier": "^8.6.0",
+    "eslint-import-resolver-typescript": "^3.5.3",
+    "husky": "^8.0.3",
+    "lint-staged": "^13.1.0",
+    "prettier": "^2.8.3",
+    "ts-node": "^10.9.1",
+    "typescript": "~4.9.4"
   },
-  "resolutions": {
-    "set-value": "^4.0.1"
+  "lint-staged": {
+    "*.{js,ts,json,md}": "prettier --write",
+    "*.{js,ts}": "eslint --fix"
   }
 }
