--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@nursefly/aws-cloudformation-wait-ready",
-  "version": "2.0.0",
+  "name": "@vivianhealth/aws-cloudformation-wait-ready",
+  "version": "3.0.0",
   "description": "Wait for a CloudFormation stack to be ready for the next deploy",
   "repository": "https://github.com/nursefly/aws-cloudformation-wait-ready",
   "author": "Vivian Health",
@@ -10,6 +10,7 @@
   },
   "type": "module",
   "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "bin": {
     "aws-cloudformation-wait-ready": "bin/aws-cloudformation-wait-ready.js"
   },
