--- a/package.json
+++ b/package.json
@@ -14,6 +14,12 @@
   "bin": {
     "aws-cloudformation-wait-ready": "bin/aws-cloudformation-wait-ready.js"
   },
+  "files": [
+    "bin",
+    "dist",
+    "LICENSE",
+    "README.md"
+  ],
   "scripts": {
     "aws-cloudformation-wait-ready": "node bin/aws-cloudformation-wait-ready.js",
     "build": "tsc",
