--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@vivianhealth/aws-cloudformation-wait-ready",
-  "version": "3.0.0",
+  "version": "0.1.0",
   "description": "Wait for a CloudFormation stack to be ready for the next deploy",
   "repository": "https://github.com/nursefly/aws-cloudformation-wait-ready",
   "author": "Vivian Health",
@@ -44,6 +44,7 @@
     "husky": "^8.0.3",
     "lint-staged": "^13.1.0",
     "prettier": "^2.8.3",
+    "semantic-release": "^20.1.0",
     "ts-node": "^10.9.1",
     "typescript": "~4.9.4"
   },
