feat(ci): make main a release branch

--- a/package.json
+++ b/package.json
@@ -51,5 +51,10 @@
   "lint-staged": {
     "*.{js,ts,json,md}": "prettier --write",
     "*.{js,ts}": "eslint --fix"
+  },
+  "release": {
+    "branches": [
+      "main"
+    ]
   }
 }
