--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "commander": "^10.0.0"
   },
   "devDependencies": {
+    "@semantic-release/git": "^10.0.1",
     "@types/node": "18.11.18",
     "@typescript-eslint/eslint-plugin": "^5.51.0",
     "@typescript-eslint/parser": "^5.51.0",
@@ -58,6 +59,22 @@
   "release": {
     "branches": [
       "main"
+    ],
+    "plugins": [
+      [
+        "@semantic-release/git",
+        {
+          "assets": [
+            "dist",
+            "bin",
+            "LICENSE",
+            "README.md",
+            "package.json",
+            "package-lock.json"
+          ],
+          "message": "chore(release): ${nextRelease.version} [skip ci]\n\n${nextRelease.notes}"
+        }
+      ]
     ]
   }
 }
