--- a/package.json
+++ b/package.json
@@ -61,6 +61,10 @@
       "main"
     ],
     "plugins": [
+      "@semantic-release/commit-analyzer",
+      "@semantic-release/release-notes-generator",
+      "@semantic-release/npm",
+      "@semantic-release/github",
       [
         "@semantic-release/git",
         {
